--- a/tasks.html
+++ b/tasks.html
@@ -99,6 +99,9 @@
 			font-size: 9pt;
 			margin: 10px 0px 10px 0px;
 		}
+		label.result {
+			font-style: italic;
+		}
 	</style>
 	<script type="text/javascript" src="https://yastatic.net/jquery/3.1.1/jquery.min.js"></script>
 	<script type="text/javascript">
@@ -106,33 +109,73 @@
 		function init() {
 			$('td button').bind('click', addNewTask);
 			$('p').bind('click', editTask);
+			$("form button").bind('click', sendTask);
 			$("td.vh button").click();
 		}
 		function addNewTask() {
-			$("form[name='task'] label").closest('label').text("Добавить задачу: ");
-			$("input[name='id']").val( 0 );
+			$("form[name='task'] label.action").text("Добавить задачу: ");
+			$("input[name='id']").val( "" );
 			$("input[name='text']").val( "" );
 			$("select[name='section']").val( $(this).closest('td').attr('class') );
 			$("select[name='status']").val( "created" );
 			$("form[name='task'] button").text("Добавить");
+			$("form[name='task'] label.result").text("");
 			$("input[name='text']").focus();
 		}
 		function editTask() {
-			$("form[name='task'] label").closest('label').text("Редактировать задачу: ");
+			$("form[name='task'] label.action").text("Редактировать задачу: ");
 			$("input[name='id']").val( $(this).attr('id') );
 			$("input[name='text']").val( $(this).text() );
 			$("select[name='section']").val( $(this).closest('td').attr('class') );
 			$("select[name='status']").val( $(this).attr('class') );
 			$("form[name='task'] button").text("Изменить");
+			$("form[name='task'] label.result").text("");
 			$("input[name='text']").focus();
+		}
+		function sendTask() {
+			$.ajax( {
+				url : "/sendTask",
+				cache: false,
+				type : "post",
+				dataType: "text",
+				data : $("form").serialize(),
+				success: function (response) {
+					// После того, как задача будет успешно отправлена на сервер
+					//console.log(response);
+					//var json_obj = $.parseJSON(response);
+					//$("form[name='task'] label.result").html(json_obj._id);
+					$("form[name='task'] label.result").html("Готово");
+					// Обновляем таблицу задач
+					$("table").load(location.href+" #data",
+						"",
+						function() { 
+							// Восстанавливаем функциональность кнопок "+" и кликабельность задач
+							$('td button').bind('click', addNewTask);
+							$('p').bind('click', editTask);
+						}
+					);
+        		},
+    			error: function (jqXHR, exception) {
+			        var msg = '';
+        			if (jqXHR.status === 0) { msg = 'Not connect.\n Verify Network.'; } 
+        			else if (jqXHR.status == 404) { msg = 'Requested page not found. [404]'; }
+        			else if (jqXHR.status == 500) { msg = 'Internal Server Error [500].'+jqXHR.responseText; }
+        			else if (exception === 'parsererror') { msg = 'Requested JSON parse failed.'; } 
+        			else if (exception === 'timeout') { msg = 'Time out error.'; } 
+        			else if (exception === 'abort') { msg = 'Ajax request aborted.'; }
+        			else { msg = 'Uncaught Error.\n' + jqXHR.responseText; }
+        			$("form[name='task'] label.result").html(msg);
+    			},
+			} );
+			return false;
 		}
 	</script>
 </head>
 <body>
 	<header class="title">Список задач 13.01.2018</header>
 	<form name="task">
-		<label>Добавить задачу: </label>
-		<input type="text" name="id" disabled="true" value="0" size="4">
+		<label class="action">Добавить задачу: </label>
+		<input type="hidden" name="id" size="24" readonly>
 		<input type="text" name="text" size="100">
 		<select title="Раздел, в который будет добавлена задача" name="section">
 		 	<option value="vs">ВАЖНО И СРОЧНО</option>
@@ -148,32 +191,39 @@
 		 	<option value="moved">перенесена в другой список</option>
 		</select>
 		<button>Добавить</button>
+		<label class="result"></label>
 	</form>
-	<table>
+	<table id="data">
 	<tr>
 		<td class="vs">
 			<header>ВАЖНО И СРОЧНО <button>+</button></header>
-			<p id="211" class="created">Составить список кадровых движений</p>
+			{{- range .Vs}}
+			<p id="{{.Id.Hex}}" class="{{.Status}}">{{marktask .Text}}</p>
+			{{- end}}
 		</td>
 		<td class="vn">
 			<header>ВАЖНО, но несрочно <button>+</button></header>
-			<p id="212" class="created"><span class="name">Святец</span> - Порешать, что делать с ЛГЭК: предложения по 250 подстанциям + 10 крупным котельным</p>
-			<p id="213" class="created"><span class="name">Святец</span> - Отправить в МРСК служебную записку с предложением о скидке 80% на 2300 опор за VPN к РЭСам</p>
-			<p id="214" class="created"><span class="name">Зайцева, Подкина</span> - подготовить описание бизнес-процессов МУП</p>
+			{{- range .Vn}}
+			<p id="{{.Id.Hex}}" class="{{.Status}}">{{marktask .Text}}</p>
+			{{- end}}
 		</td>
 		<td class="ns">
 			<header>неважно, но СРОЧНО <button>+</button></header>
-			<p id="215" class="done"><span class="name">Дашков</span> - Помочь "Донскому лесу" с отображением 24 камер на одном мониторе</p>
-			<p id="216" class="canceled"><span class="name">Евсюков</span> - Получать письма с abuse@rt.ru</p>
-			<p id="217" class="moved"><span class="name">Сараев</span> - Определить и сдать Аверову темы для научных работ на конкурс</p>
+			{{- range .Ns}}
+			<p id="{{.Id.Hex}}" class="{{.Status}}">{{marktask .Text}}</p>
+			{{- end}}
 		</td>
 		<td class="nn">
 			<header>неважно и несрочно <button>+</button></header>
-			<p id="218" class="created"><span class="name">Стрельников</span> - Купить стремянки, обжимные машинки, эл.книгу, стол, пульт Лутохину</p>
-			<p id="219" class="created"><span class="name">Стрельников</span> - Поговорить про Blockchain</p>
+			{{- range .Nn}}
+			<p id="{{.Id.Hex}}" class="{{.Status}}">{{marktask .Text}}</p>
+			{{- end}}
 		</td>
 		<td class="vh">
 			<header>входящие задачи <button>+</button></header>
+			{{- range .Vh}}
+			<p id="{{.Id.Hex}}" class="{{.Status}}">{{marktask .Text}}</p>
+			{{- end}}
 		</td>
 	</tr>
 	</table>
